# munch

./: .env  .formatter.exs  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  create_test_database.sql  manage.py  mix.exs  package-lock.json  package.json  pyproject.toml  seed.sql
assets/: package-lock.json  package.json  tailwind.config.js
assets/css/: app.css  tailwind_heroicons.js
assets/js/: app.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
core/: admin.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_rename_notes_log_note_rename_notes_restaurant_note_and_more.py  0002_restaurant_coords_restaurant_notes.py  0002_restaurantitem_textitem_delete_listitem.py  0003_alter_restaurant_coords_alter_restaurant_notes.py  0003_remove_review_restaurant_remove_review_user_and_more.py  0004_alter_restaurant_notes.py  0004_rename_user_list_author_remove_restaurant_osm_id_and_more.py  0005_remove_gourmand_city_alter_gourmand_country.py  0005_remove_review_publish_time_review_date_and_more.py  0006_restaurant_address.py
dine/: asgi.py  settings.py  urls.py  wsgi.py
lib/: munch.ex  munch_web.ex
lib/munch/: accounts.ex  application.ex  errors.ex  importer.ex  lists.ex  mailer.ex  osm.ex  postgres_types.ex  profile.ex  repo.ex  restaurants.ex
lib/munch_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex  user_auth.ex
munch/: asgi.py  settings.py  urls.py
osm/: download_osm.exs  style.lua
priv/repo/: seeds.exs
src/: main.rs
src/lib/: db.ts  lists.ts  restaurants.ts  sessions.ts  (+2 more)
test/: test_helper.exs
(+122 files in other folders)
