[package]
name = "munch"
version = "0.1.0"
edition = "2021"

[dependencies]

axum = "0.7.5"
tokio = { version = "1.40.0", features = ["full"] }
minijinja = { version = "2.2.0", features = ["loader"] }
tower-http = { version = "0.5.2", features = ["fs", "auth", "compression-br"] }
chrono = {version = "0.4.38", features = ["serde"] }
serde = {version = "1.0.210", features = ["derive"] }
sqlx = {version = "0.8.2", features = ["runtime-tokio", "postgres", "macros", "chrono"] }
