[project]
name = "munch"
version = "2024.9.0"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  {name = "Leif Metcalf", email = "me@leif.nz"},
]
maintainers = [
  {name = "Leif Metcalf", email = "me@leif.nz"}
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Framework :: Django :: 5.1",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Programming Language :: Python :: 3"
]
dependencies = [
    "django-countries>=7.6.1",
    "django>=5.1.1",
    "psycopg[binary]>=3.2.2",
]
